<resources>
    <string name="app_name">CrowdService</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="spinner_title">Select Category</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log Out</string>
    <string name="com_facebook_loginview_log_in_button">Log In</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log Out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log In&#8230;</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged In</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not Logged In</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="app_id">451325268411101</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="title_activity_user_registration">UserRegistration</string>
    <string name="title_activity_pay_pal_details">PayPalDetails</string>
    <string name="title_activity_bank_details">BankDetailsActivity</string>
    <string name="terms_and_condtions_hyperlink">Terms of Use and Privacy Policy</string>
    <string name="watch_tutorial_hyperlink">Watch Tutorial</string>
    <string name="login_guest_hyperlink">Login as Guest</string>
    <string name="title_activity_edit_user_profile">EditUserProfile</string>
    <string name="title_paypal_activity">PayPal</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have a Crowdservice account?</string>
    <string name="sign_in">Log In</string>
    <string name="or">&#160;or&#160;</string>
    <string name="by_using_crowdservice_agree">By using Crowdservice you agree to Crowdservice\'s</string>
    <string name="terms_to_use">Terms to Use</string>
    <string name="and">&#160;and&#160;</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="signin">SignIn</string>
    <string name="enter_username">Email/Username</string>
    <string name="enter_password">Password</string>
    <string name="register">Register</string>
    <string name="register_with_fb">Register with Facebook</string>
    <string name="register_with_email">Register with Email</string>
    <string name="user_profile">User Profile</string>
    <string name="enter_uname">Username</string>
    <string name="enter_fname">Firstname</string>
    <string name="enter_lname">Lastname</string>
    <string name="enter_email_add">Email</string>
    <string name="enter_pass">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="true_add">True/Billing Address (Not Shown Publicly)</string>
    <string name="enter_add_1">Address1</string>
    <string name="enter_add_2">Address2</string>
    <string name="enter_city">City</string>
    <string name="enter_state">State</string>
    <string name="enter_zip">Zip</string>
    <string name="approx_add">Approx Address(Optional)</string>
    <string name="submit">Submit</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="default_screen_radius">Default Screen Radius</string>
    <string name="decrease_launch_time">Decreases launch time</string>
    <string name="set_distance_of_posted_job">Set Distance of Posted Jobs</string>
    <string name="reduce_clutter_in_busy_areas">Reduce clutter in busy areas</string>
    <string name="map_refresh_rate">Map Refresh Rate</string>
    <string name="fine_tune_for_your_phone">Fine Tune for your Phone</string>
    <string name="profile">Profile</string>
    <string name="show_traffic">Show Traffic</string>
    <string name="useful_for_providers">Useful for Providers</string>
    <string name="tip_of_the_day">Tip of the day</string>
    <string name="logout">Logout</string>
    <string name="dispute">Dispute</string>
    <string name="setting">Setting</string>
    <string name="edit">Edit</string>
    <string name="karma_rating">Karma Rating</string>
    <string name="level">Level</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="background_check_request">Background\nCheck Request</string>
    <string name="edit_prof_picture">&#160;Edit Profile Picture</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="user_name">USERNAME</string>
    <string name="ascustomer">as Customer</string>
    <string name="asprovider">as Provider</string>
    <string name="map_everyone">Everyone</string>
    <string name="map_myjobs">My Jobs</string>
    <string name="map_openjobs">Open Jobs</string>
    <string name="detailstr">My areas of expertise include </string>
    <string name="txtyourname">Your name</string>
    <string name="txtothername">Other\'s Name</string>
    <string name="txtjobdate">Job Date</string>
    <string name="txtjobname">Job Name</string>
    <string name="txtdispute">Describe your Dispute</string>
    <string name="txtdisputehint">150 Characters</string>
    <string name="txtsubmit">Submit</string>
    <string name="txtcontact">Contact</string>
    <string name="txtcustomer">Customer :</string>
    <string name="txtprovider">Provider :</string>
    <string name="txtstartdate">Start Date :</string>
    <string name="txtenddate">Date :</string>
    <string name="txtsendmsg">Send Message</string>
    <string name="txtcompletejob">Complete Job</string>
    <string name="txtcanceljob">Cancel Job</string>
    <string name="txtsendmessagecomment">En route...\nItem purchased..\nChange Item..\nRunning late..</string>
    <string name="txtto">To:</string>
    <string name="txtsend">Send</string>
    <string name="txtfeedbackcustomer">Feedback-Customer Screens</string>
    <string name="txtpromptness">Promptness</string>
    <string name="txtprofessionalism">Professionalism</string>
    <string name="txtcommunication">Communication</string>
    <string name="txtcomments">Comments</string>
    <string name="txtpromptness_sub">On time-given traffic,goods or other issue</string>
    <string name="txtprofessionalism_sub">Friendly + Respectful of you + your properly</string>
    <string name="txtcommunication_sub">Kept you appraised,notified you of any problems.</string>
    <string name="txtkarma">KARMA</string>
    <string name="txtquestion">Question :</string>
    <string name="txtshowdeletemsg">You cannot delete active or completed Jobs</string>
    <string name="txtshowarchivemsg">You cannot delete active or completed Jobs</string>
    <string name="txtshowarchive">You can Archive only completed job</string>
    <string name="txtsurearchive">Are you sure Archive this job</string>
    <string name="txtsuredelete">Are you sure?</string>
    <string name="txtalerttip">Tip of the Day</string>
    <string name="txtalert_bid_0">Bid Placed</string>
    <string name="txtalert_bid_1">User Accept your bid</string>
    <string name="txtalert_bid_11">Request Cancel</string>
    <string name="txtalert_cancel">Cancel Job</string>
    <string name="txtmessagetip">You can run job as either Customer or Gofer.Switch between roles in the Jobs screen.</string>
    <string name="txtmessageshow">Traffic will be shown once the map refreshes</string>
    <string name="txtmessagereduced">Traffic will be reduced once the map refreshes</string>
    <string name="feedback">Feedback</string>
    <string name="app_alert_title">Crowd Service</string>
    <string name="title_activity_address_form">AddressFormActivity</string>
    <string name="txtwhenstart">When / where do you want this done?</string>
    <string name="txtwhenstart1">When do you want this done?</string>
    <string name="txtstartingaddress">Starting Address</string>
    <string name="txttouchhint">Touch to Add</string>
    <string name="txtendingaddress">Ending Address</string>
    <string name="txtapproxaddress">Approx Address</string>
    <string name="txttrueaddress">True Address</string>
    <string name="title_activity_parent">ParentActivity</string>
    <string name="title_activity_mailbox">MailboxActivity</string>
    <string name="title_activity_mail_detail">MailDetailActivity</string>
</resources>