<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:background="@drawable/blue_top_bar"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/txtcontact"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/sign_up_text_size" />

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/left"
            android:drawableStart="@drawable/left"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sign_up_text_size" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="150"
        android:fillViewport="true"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/layoutPopup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtyourname"
                    android:textSize="@dimen/login_as_guest_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="@dimen/register_prof_pic_size"
                    android:layout_height="wrap_content"
                    android:text="@string/txtcustomer"
                    android:textSize="@dimen/agreement_text_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_customer"
                    android:layout_width="@dimen/register_prof_pic_size"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/agreement_text_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="@dimen/register_prof_pic_size"
                    android:layout_height="wrap_content"
                    android:text="@string/txtprovider"
                    android:textSize="@dimen/agreement_text_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_provider"
                    android:layout_width="@dimen/register_prof_pic_size"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/agreement_text_text_size" />
            </LinearLayout>

            <!-- <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="@dimen/register_prof_pic_size"
                    android:layout_height="wrap_content"
                    android:text="@string/txtstartdate"
                    android:textSize="@dimen/agreement_text_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_startdate"
                    android:layout_width="@dimen/register_prof_pic_size"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/agreement_text_text_size" />
            </LinearLayout> -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="@dimen/register_prof_pic_size"
                    android:layout_height="wrap_content"
                    android:text="@string/txtenddate"
                    android:textSize="@dimen/agreement_text_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_enddate"
                    android:layout_width="@dimen/register_prof_pic_size"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/agreement_text_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <Button
                    android:id="@+id/btn_send_message"
                    android:layout_width="@dimen/login_with_fb_width"
                    android:layout_height="@dimen/login_with_fb_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/login_blue_line_bottom_margin"
                    android:background="@drawable/blank_btn2x"
                    android:text="@string/txtsendmsg"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/login_as_guest_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <Button
                    android:id="@+id/btn_complete"
                    android:layout_width="@dimen/login_with_fb_width"
                    android:layout_height="@dimen/login_with_fb_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/login_blue_line_bottom_margin"
                    android:background="@drawable/blank_btn2x"
                    android:text="@string/txtcompletejob"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/login_as_guest_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="@dimen/login_with_fb_width"
                    android:layout_height="@dimen/login_with_fb_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/login_blue_line_bottom_margin"
                    android:background="@drawable/bgred"
                    android:text="@string/txtcanceljob"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/login_as_guest_text_size" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>